<resources>

    <string name="app_name">Spesa Condivisa</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nuovo_prodotto">"Nuovo prodotto</string>
    <string name="inserisci_i_Dati">Inserisci i Dati</string>
    <string name="nome">Nome</string>
    <string name="categoria">Categoria</string>
    <string name="quantita">Quantità</string>
    <string name="note_aggiuntive">Note aggiuntive</string>
    <string name="elimina">Elimina</string>
    <string name="modifica">Modifica</string>
    <string name="annulla">Annulla</string>
    <string name="dati">Inserisci i dati</string>
    <string name="inserisci">Inserisci</string>
    <string name="logout">Logout</string>
    <string name="gruppi">Gruppi</string>
    <string name="add_group">Aggiungi gruppo</string>
    <string name="crea_gruppi">Crea dei gruppi compariranno qui!</string>
    <string name="prodotti_categoria">Prodotti per categoria</string>
    <string name="lista_della_spesa">Lista della spesa</string>
    <string name="aggiungi_prodotti">Aggiungi dei prodotti e compariranno qui!</string>
    <string name="compra">Compra</string>
    <string name="aggiungi_prodotto">Aggiungi prodotto</string>
    <string name="prodotti_acquistati">Prodotti acquistati</string>
    <string name="lista_delle_spese">Lista delle spese</string>
    <string name="il_mio_totale">Il mio totale</string>
    <string name="totale_spese">Totale spese</string>
    <string name="acquista_prodotti">Acquista dei prodotti e le tue spese compariranno qui!</string>
    <string name="benvenuto_ti_sei_autenticato">Benvenuto, ti sei autenticato</string>
    <string name="my_account">My account</string>
    <string name="inserisci_il_tuo_nome">Inserisci il tuo nome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma password</string>
    <string name="inserisci_nuovo_gruppo">Inserisci nuovo gruppo</string>
    <string name="nome_gruppo">Nome gruppo</string>
    <string name="nome_membro">Nome membro</string>
    <string name="email_membro">Email membro</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="crea_gruppo">Crea gruppo</string>
    <string name="registrati">Registrati</string>
    <string name="login">Login</string>
    <string name="saldo">Saldo</string>
    <string name="utenti_del_gruppo">Utenti del gruppo</string>
    <string name="spiegazione_saldo">Il saldo in rosso indica la somma dovuta, il saldo in verde la somma da ricevere</string>
    <string name="aggiungi_utente">"Aggiungi utente</string>
    <string name="statistiche">Statistiche</string>
    <string name="statistiche_vuote">Acquista dei prodotti e le tue statistiche compariranno qui!</string>
    <string name="la_spesa_condivisa">La spesa condivisa</string>
    <string name="impostazioni_e_accessibilita">Impostazioni e accessibilità</string>
    <string name="quantita2">quantita:</string>
    <string name="comprato_da">Comprato da:</string>
    <string name="pagato_da">Pagato da:</string>
    <string name="non_hai_account">Non hai un account?</string>
    <string name="inserisci_prodotto">Inserisci prodotto</string>
    <string name="modifica_prodotto">Modifica prodotto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>