<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.InserisciProdotto">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/inserisci_prodotto"
            app:titleTextColor="@android:color/white"
            android:background="@color/primaryColor"
            app:navigationIcon="@drawable/ic_back"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuovo_prodotto"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/shop" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/dati" />

            <EditText
                android:id="@+id/Nomeprodotto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nome" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="categoria" />

            <Spinner
                android:id="@+id/spinnerQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/quantita" />


            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/note_aggiuntive" />

            <Button
                android:id="@+id/btninsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:layout_marginTop="20dp"
                android:text="@string/inserisci" />

            <Button
                android:id="@+id/btncancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:layout_marginTop="20dp"
                android:text="@string/annulla" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>